fix gradient bug on safari

--- a/_src/sass/main.scss
+++ b/_src/sass/main.scss
@@ -46,7 +46,7 @@ img {
         bottom: 0;
         left: 0;
         width: 100%;
-        background-image: linear-gradient(bottom, $background-color 10%, rgba(0,0,0,0) 50%);
+        background-image: linear-gradient(bottom, $background-color 10%, rgba(255,255,255,0) 50%);
         content: "";
         height: 100%;
     }
